# dice-blackjack-mdp

./: .gitignore  .pre-commit-config.yaml  LICENSE  Q-Learning.ipynb  README.md  Training.ipynb  pyproject.toml
src/: agent.py  env.py  roll_dice.py  visualization.py
